# Nova-Indie-Game-Club.github.io

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  compile-scss.sh  run-website-data.sh  sync-static-dir.sh
.github/: deploy.yml
.github/workflows/: deploy.yml
crates/website_data/: Cargo.toml
crates/website_data/src/: lib.rs  main.rs  tool.rs
crates/website_data/src/model/: work.rs
crates/website_model/: Cargo.toml
crates/website_model/src/: work.rs
data/works/: 1cb34a3a-26ff-4ee6-9a15-0fab7b7e87d9.json  27df9d6f-d08e-4d3f-9ed3-09a2f999ef0d.json  32cc4181-4286-4955-91d1-77d80c7b3c5d.json  332dee5e-6fae-4837-a838-e2a42f1d7a45.json  676a013d-a8f7-4b47-afd0-73e53a7bf447.json  901789e0-9a64-45cd-a3a3-69ab32836954.json  ef98442a-2d20-4a9b-8632-261f57832de6.json
docs/: index.html
docs/.perseus/: bundle.js  bundle.wasm
docs/.perseus/page/xx-XX/: about.json
docs/.perseus/static/css/: index.css  recommended_works.css.map  root.css  root.scss  work_spotlight.css  work_spotlight.scss
notion_data_collection/: Cargo.toml
notion_data_collection/data/works/: 0253da5d-bad9-4761-82f9-50fa88320c04.json  e90fa297-1da5-421c-9d2d-75a470b37a5b.json
notion_data_collection/src/: lib.rs  main.rs
notion_data_collection/src/model/: mod.rs  work.rs
pkg/.perseus/page/xx-XX/: .json
pkg/.perseus/static/css/: recent_work_focused.css  (+5 more)
pkg/about/: index.html
prototype/: index.html
prototype/css/: index.css  index.css.map  index.scss
prototype/home_page_v0.1.0/css/: index.css  index.scss
prototype/recent_works_focused/: index.html
prototype/recent_works_focused/css/: recent_work_focused.css.map  recommended_works.css  recommended_works.css.map  recommended_works.scss  work_spotlight.css  work_spotlight.css.map  work_spotlight.scss
prototype/recommended_works_v1.0.0/: index.html
prototype/recommended_works_v1.0.0/css/: recommended_works.css  recommended_works.css.map  recommended_works.scss  work_spotlight.css  work_spotlight.css.map  work_spotlight.scss
src/: lib.rs  main.rs  svg.rs  tool.rs
src/components/: footer.rs  mod.rs  work.rs  work_item.rs
src/templates/: about.rs  index.rs
static/assets/images/: bg_noise.afphoto
static/css/: index.css  index.css.map  index.scss  recent_work_focused.css  recent_work_focused.css.map  recent_work_focused.scss  recommended_works.css  recommended_works.css.map  recommended_works.scss  root.css  root.css.map  root.scss  work_spotlight.css  work_spotlight.css.map  work_spotlight.scss
static/css/page/: home.css  home.css.map  home.scss
