workspace = { members = ["crates/website_data", "crates/website_model"] }

[package]
name = "nova_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = ["hydrate"] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
website_model = { path = "crates/website_model" }
web-sys = { version = "0.3.68", features = ["HtmlElement", "CssStyleDeclaration"] }
wasm-bindgen = "0.2.91"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
perseus-axum = { version = "=0.4.2", features = ["dflt-server"] }
website_data = { path = "crates/website_data" }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
