[package]
name = "notion_data_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
notion = "0.5.1"
serde = "1.0.196"
serde_json = "1.0.113"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = "1.36.0"
reqwest = "0.11.24"
