[package]
name = "website_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["full"]}
reqwest = "0.11.24"
notion-client = "0.1.9"
chrono = "0.4.34"
website_model ={ path = "../website_model"}
scraper = "0.12"
urlencoding = "2.1.3"
